[package]
name = "objectviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = {version = "0.12.0", features = ["tables-api"]}
sdl2 = "0.34.5"
imgui-sdl2-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
sysinfo = "0.31.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]